--- a/WindowsTest/MainWindow.xaml
+++ b/WindowsTest/MainWindow.xaml
@@ -2,7 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <StackPanel>
+        <Button Content="DrawCircle" Click="DrawCircle_Click"/>
+        <Button Content="Draw Chessboard Black/White" Click="DrawChessboard1_Click"/>
+        <Button Content="Draw Chessboard White/Black" Click="DrawChessboard2_Click"></Button>
+        <Button Content="Draw Chessboard Green/Red" Click="DrawChessboard3_Click"></Button>
+    </StackPanel>
 </Window>
