--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="800" Width="1600" WindowState="Maximized">
     <Grid>
-        
+        <StackPanel Orientation="Horizontal">
+            <Image x:Name="ColorImageElement1" Height="350" Width="525"/>
+            <Image x:Name="ColorImageElement2" Height="350" Width="525"/>
+            <Image x:Name="ColorImageElement3" Height="350" Width="525"/>
+        </StackPanel>
     </Grid>
 </Window>
