--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -3,7 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="800" Width="1600" WindowState="Maximized">
     <Grid>
-        <StackPanel Orientation="Horizontal">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Image x:Name="ColorImageElement1" Grid.Row="0" Grid.Column="0" Height="350" Width="525"/>
+        <Image x:Name="ColorImageElement2" Grid.Row="0" Grid.Column="1" Height="350" Width="525"/>
+        <Image x:Name="ColorImageElement3" Grid.Row="0" Grid.Column="2" Height="350" Width="525"/>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
+            <Button Content="Start Calibration" Click="InitialCalibration"></Button>
+            <Button Content="Obstacle TopLeft" Click="ObstTopLeft"></Button>
+            <Button Content="Obstacle TopRight" Click="ObstTopRight"></Button>
+            <Button Content="Obstacle BottomLeft" Click="ObstBtmLeft"></Button>
+            <Button Content="Obstacle BottomRight" Click="ObstBtmRight"></Button>
+        </StackPanel>
+        <!--<StackPanel Orientation="Horizontal">
             <Border BorderThickness="1" BorderBrush="#FF000000">
                 <Image x:Name="ColorImageElement1" Height="350" Width="525"/>
             </Border>
@@ -14,6 +33,6 @@
                 <Image x:Name="ColorImageElement3" Height="350" Width="525"/>
             </Border>
             <Button Content="obstacle" Click="click"></Button>
-        </StackPanel>
+        </StackPanel>-->
     </Grid>
 </Window>
