--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -23,6 +23,7 @@
             <Button Content="Obstacle BottomRight" Click="ObstBtmRight"></Button>
             <Button Content="Obstacle" Click="Obst"></Button>
             <Button Content="Display Area" Click="dsplArea"></Button>
+            <Button Content="Display Blank" Click="dsplBlank"></Button>
         </StackPanel>
         <!--<StackPanel Orientation="Horizontal">
             <Border BorderThickness="1" BorderBrush="#FF000000">
