--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -25,6 +25,7 @@
             <Button Content="Obstacle" Click="Obst"></Button>
             <Button Content="Display Area" Click="dsplArea"></Button>
             <Button Content="Display Blank" Click="dsplBlank"></Button>
+            <Button Content="Display Blank" Click="CalibBeamer"></Button>
         </StackPanel>
         <!--<StackPanel Orientation="Horizontal">
             <Border BorderThickness="1" BorderBrush="#FF000000">
