--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="800" Width="1600" WindowState="Maximized">
-    <Grid>
+    <Grid Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="100" />
@@ -12,9 +12,9 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <Image x:Name="ColorImageElement1" Grid.Row="0" Grid.Column="0" Height="350" Width="525"/>
-        <Image x:Name="ColorImageElement2" Grid.Row="0" Grid.Column="1" Height="350" Width="525"/>
-        <Image x:Name="ColorImageElement3" Grid.Row="0" Grid.Column="2" Height="350" Width="525"/>
+            <Image x:Name="ColorImageElement1" Grid.Row="0" Grid.Column="0" Height="350" Width="525"/>
+            <Image x:Name="ColorImageElement2" Grid.Row="0" Grid.Column="1" Height="350" Width="525"/>
+            <Image x:Name="ColorImageElement3" Grid.Row="0" Grid.Column="2" Height="350" Width="525"/>
         <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
             <Button Content="Start Calibration" Click="InitialCalibration"></Button>
             <!--<Button Content="Obstacle Middle" Click="ObstMid"></Button>-->
