--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -4,11 +4,11 @@
         Title="MainWindow" Height="900" Width="1600" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20" />
-            <RowDefinition Height="350" />
-            <RowDefinition Height="20" />
-            <RowDefinition Height="350" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -27,35 +27,29 @@
         <Image x:Name="ColorImageElement4" Grid.Row="3" Grid.Column="0" Height="350" Width="525"/>
         <Image x:Name="ColorImageElement5" Grid.Row="3" Grid.Column="1" Height="350" Width="525"/>
         <Image x:Name="ColorImageElement6" Grid.Row="3" Grid.Column="2" Height="350" Width="525"/>
-        <StackPanel Grid.Row="4" Grid.ColumnSpan="3" Orientation="Horizontal">
+        <StackPanel Height="50" Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal">
             <Button Content="Start Calibration" Click="InitialCalibration"></Button>
             <!--<Button Content="Obstacle Middle" Click="ObstMid"></Button>-->
-            <Button Content="Obstacle TopLeft" Click="ObstTopLeft"></Button>
+            <!--<Button Content="Obstacle TopLeft" Click="ObstTopLeft"></Button>
             <Button Content="Obstacle TopRight" Click="ObstTopRight"></Button>
             <Button Content="Obstacle BottomLeft" Click="ObstBtmLeft"></Button>
-            <Button Content="Obstacle BottomRight" Click="ObstBtmRight"></Button>
+            <Button Content="Obstacle BottomRight" Click="ObstBtmRight"></Button>-->
             <Button Content="Obstacle" Click="Obst"></Button>
             <Button Content="Display Area" Click="dsplArea"></Button>
             <Button Content="Display Blank" Click="dsplBlank"></Button>
             <Button Content="Calib Beamer" Click="CalibBeamer"></Button>
-            
+
             <StackPanel Orientation="Vertical">
                 <Button Content="Kinect UP" Click="KinectUp"/>
                 <Button Content="Kinect DOWN" Click="KinectDown"/>
             </StackPanel>
         </StackPanel>
-        
-        <!--<StackPanel Orientation="Horizontal">
-            <Border BorderThickness="1" BorderBrush="#FF000000">
-                <Image x:Name="ColorImageElement1" Height="350" Width="525"/>
-            </Border>
-            <Border BorderThickness="1" BorderBrush="#FF000000">
-                <Image x:Name="ColorImageElement2" Height="350" Width="525"/>
-            </Border>
-            <Border BorderThickness="1" BorderBrush="#FF000000">
-                <Image x:Name="ColorImageElement3" Height="350" Width="525"/>
-            </Border>
-            <Button Content="obstacle" Click="click"></Button>
-        </StackPanel>-->
+
+        <StackPanel Height="100" Grid.Row="4" Grid.Column="2" Orientation="Vertical">
+            <TextBlock Name="AreaWidth" Text="Area Width: " Height="20" Width="Auto" TextAlignment="Center" />
+            <TextBlock Name="AreaHeight" Text="Area Height: " Height="20" Width="Auto" TextAlignment="Center" />
+            <TextBlock Name="ObstacleX" Text="Obstacle X: " Height="20" Width="Auto" TextAlignment="Center" />
+            <TextBlock Name="ObstacleY" Text="Obstacle Y: " Height="20" Width="Auto" TextAlignment="Center" />
+        </StackPanel>
     </Grid>
 </Window>
