--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -22,7 +22,7 @@
         <Image x:Name="ColorImageElement2" Grid.Row="1" Grid.Column="1" Height="350" Width="525"/>
         <Image x:Name="ColorImageElement3" Grid.Row="1" Grid.Column="2" Height="350" Width="525"/>
         <TextBlock Text="4" Grid.Row="2" Grid.Column="0" Height="20" Width="525" TextAlignment="Center"></TextBlock>
-        <TextBlock Text="5" Grid.Row="2" Grid.Column="1" Height="20" Width="525" TextAlignment="Center"></TextBlock>
+        <TextBlock Text="'interne' Area" Grid.Row="2" Grid.Column="1" Height="20" Width="525" TextAlignment="Center"></TextBlock>
         <TextBlock Text="Live Bild" Grid.Row="2" Grid.Column="2" Height="20" Width="525" TextAlignment="Center"></TextBlock>
         <Image x:Name="ColorImageElement4" Grid.Row="3" Grid.Column="0" Height="350" Width="525"/>
         <Image x:Name="ColorImageElement5" Grid.Row="3" Grid.Column="1" Height="350" Width="525"/>
